<resources>
    <string name="app_name">Babble Chat App</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in_to_continue">Log In To Continue</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="sign_up">SIGN UP</string>
    <string name="your_name">Your Name</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="back_to_login">Back To Login</string>
    <string name="select_user">Select User</string>
    <string name="description_send_message">Send Message</string>
    <string name="type_a_message">Type a message</string>
</resources>